@@ -45,7 +45,7 @@ title: EISMINT-3 Greenland
 comment: Steady-state scenario
 
 [CF output]
-name: e3gl_steady.2ka.nc
+name: e3gl_steady.nc
 frequency: 2000
 variables: thk bmlt btemp temp uvel vvel wvel wgrd acab diffu artm usurf topg relx flwa EISMINT_prcp arng prcp bheatflx presprcp presartm
 
